--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=spike
+
+spring.datasource.url=jdbc:postgresql://localhost/my_app
+spring.datasource.username=admin
+spring.datasource.password=secret
